# rule-mirror

./: .gitignore  Cargo.toml  Dockerfile  README.md  db.md  docker-compose.yml
.github/: dependabot.yml
.vim/: template.rs
bot/: Cargo.toml
bot/src/: main.rs
common/: Cargo.toml
common/src/: db.rs  lib.rs  secret.rs
src/: main.rs  secrets.rs
src/db/: mod.rs
src/discord/: handler.rs  mod.rs
src/webhook/: mod.rs
web/: Cargo.toml
web/src/: main.rs  schema.rs
