[package]
name = "rule-mirror"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/SOF3/rule-mirror"
homepage = "https://github.com/SOF3/rule-mirror"
readme = "README.md"
description = "A Discord bot that mirrors a file on GitHub to messages on a Discord channel"

[dependencies]
comrak = "0.7.0"
config = "0.10.1"
diesel = {version = "1.4.3", features = ["postgres", "r2d2"]}
dirmod = "0.2.0-alpha.1"
getset = "0.0.9"
log = "0.4.10"
pretty_env_logger = "0.4.0"
r2d2 = "0.8.8"
rocket = {version = "0.4.2", git = "https://github.com/SOF3/Rocket", branch = "v0.4-ring-compat"}
serde = {version = "1.0.125", features = ["derive"]}
serenity = "0.6.4"
