[package]
name = "common"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/SOF3/blob-mirror"
homepage = "https://github.com/SOF3/blob-mirror"
readme = "README.md"
description = "A Discord bot that mirrors a file on GitHub to messages on a Discord channel"

[dependencies]
anyhow = "1.0.42"
config = "0.11.0"
futures = "0.3.14"
log = "0.4.10"
rand = "0.8.4"
redis-async = "0.10.0"
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.64"
tokio = {version = "1.9.0", features = ["net", "rt", "sync"]}
