[package]
name = "web"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/SOF3/blob-mirror"
homepage = "https://github.com/SOF3/blob-mirror"
readme = "README.md"
description = "A Discord bot that mirrors a file on GitHub to messages on a Discord channel"

[dependencies]
anyhow = "1.0.42"
bytes = "1.0.1"
common = {path = "../common"}
futures = "0.3.14"
hex = "0.4.3"
log = "0.4.10"
pretty_env_logger = "0.4.0"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
tokio = {version = "1.9.0", features = ["rt-multi-thread", "macros"]}
warp = "0.3.1"
warp_github_webhook = "0.6.0"
